Fix navbar logo alignment

--- a/assets/sass/nav.scss
+++ b/assets/sass/nav.scss
@@ -38,13 +38,16 @@
     gap: 20px;
     align-items: center;
 
-    img.logo {
-        width: 40px;
-        height: 40px;
-        view-transition-name: logo;
-        &:hover {
-            filter: brightness(0.8);
-            transition-duration: 150ms;
+    .nav-logo {
+        display: flex;
+        img.logo {
+            width: 40px;
+            height: 40px;
+            view-transition-name: logo;
+            &:hover {
+                filter: brightness(0.8);
+                transition-duration: 150ms;
+            }
         }
     }
 }
